<resources>
    <string name="app_name">Petagram</string>
    <string name="Boton_click">Click!</string>
    <string name="Texto_titulo">Hello World!</string>
    <string name="mensaje">FloatingButton</string>
    <string name="nombre_mascota">Nombre</string>
    <string name="raking_mascota">3</string>
    <string name="mContacto">Contacto</string>
    <string name="mAbout">Acerca de</string>
    <string name="Saidamar">Saidmar Contreras</string>
    <string name="bioSaidmar">Estudiante de Ing. Telecomunicaciones de la UCAB, 21 Años,
    le gusta hacer ejercicio y salir con amigos, y realiza cursos para adquirir nuevas habilidades</string>
    <string name="contacto">Contacto</string>
    <string name="hint_nombre_contact">Ingresar Nombre</string>
    <string name="hint_correo_contacto">Ingrese Email</string>
    <string name="hint_mensaje_contact">Mensaje</string>
    <string name="btn_contact">Enviar Comentario</string>
    <string name="toast_contact">Enviando...</string>
    <string name="nombre_dandyt">Dandy</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
