<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".menuOpciones.Menu_Contacto">

    <include android:id="@+id/miActionBar"
        layout="@layout/actionbar"></include>


    <TextView
        android:id="@+id/titulo_contacto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/miActionBar"
        android:layout_marginTop="@dimen/titulo_bio"
        android:layout_marginLeft="@dimen/left"
        android:text="@string/contacto"
        android:textSize="@dimen/titulo_bio"
        android:textColor="@color/colorAccent"
        android:textStyle="bold"/>

    <LinearLayout
        android:id="@+id/layout_nombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/titulo_contacto"
        android:padding="@dimen/left">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_nombre_contact"
            android:textSize="@dimen/cuerpo_bio"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_correo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/layout_nombre"
        android:padding="@dimen/left">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_correo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_correo_contacto"
            android:textSize="@dimen/cuerpo_bio"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_mensaje"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/layout_correo"
        android:padding="@dimen/left">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_mensaje"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_mensaje_contact"
            android:textSize="@dimen/cuerpo_bio"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/layout_mensaje"
        android:padding="@dimen/left">

        <Button
            android:id="@+id/btn_contact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/cuerpo_bio"
            android:text="@string/btn_contact"
            android:theme="@style/MiBotonRaised"
            />

    </LinearLayout>


</RelativeLayout>
